package behavioral.iterator;

import java.util.Iterator;

public interface Player {
    Iterator<SampleIterator> getIterator();
}
